--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="filter_name">Popular Movies</string>
     <string name="title_activity_movie_details">MovieDetails</string>
 </resources>
